# safescaleai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: auth.py  main.py
backend/app/api/: admin.py  audit.py  auth.py  billing.py  dashboard.py  debug.py  mcp.py  policy_audit.py  reports.py  scan.py  scraper.py
backend/app/core/: config.py
backend/app/mcp/: README.md  __init__.py  registry.py  server.py
backend/app/mcp/connectors/: email_mbox.py  local_files.py
backend/app/models/: __init__.py  audit.py  compliance.py
backend/app/schemas/: audit.py  auth.py  billing.py  compliance.py  policy_audit.py  scan.py  scraper.py
backend/app/services/: audit.py  checklist.py  classifier.py  embeddings.py  guardrail.py  policy_audit.py  scan.py  scraper.py  security.py  settings.py  storage.py
backend/migrations/: 001_create_audit_log.sql  002_create_core_tables.sql  003_create_policy_audit.sql  004_create_scraper_run.sql  005_reset_checklist_embeddings.sql  006_create_app_setting.sql  007_add_orgs.sql  008_reset_app_setting.sql  009_add_classification.sql  010_create_users.sql  011_add_industry.sql
backend/safescale_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: README.md  inbox.mbox
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: alerts-header-actions.tsx  auth-panel.tsx  (+14 more)
scripts/: dev-up.sh  dev-watch.sh
shared/contracts/: README.md  admin.ts  audit.ts  billing.ts  compliance.ts  policy-audit.ts  scan.ts  scraper.ts
(+9 files in other folders)
