[project]
name = "safescale-backend"
version = "0.1.0"
description = "SafeScale AI backend services"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "pgvector>=0.2.5",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.8",
  "openai>=1.40.0",
  "cryptography>=3.1",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.11"
]

[tool.uvicorn]
factory = false

[tool.setuptools]
packages = ["app"]
